Fix Vercel deploy

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,13 @@
   ],
   "routes": [
     {
+      "src": "/^((?!\\.html|css|js|svg|ico|png|jpe?g|gif|webp$).)+/",
+      "dest": "/index.html"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
