--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ QDRANT_URL=http://localhost:6333
 # QDRANT_API_KEY=your-qdrant-api-key-if-using-cloud  # Optional
 QDRANT_URL=https://4091da52-f457-4870-8304-af4e896d5960.europe-west3-0.gcp.cloud.qdrant.io # e.g., https://your-cluster-url.qdrant.tech:6333
 QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.3zAWqYZndfJb9G8PSbaFUwLdHqj1XFVm-hWFbRJjH1Y
-COHERE_API_KEY=YI9moZiUc2qYkCDPxoenhZvVHKcExMQ202KXYjtX
+COHERE_API_KEY=YI9moZiUc2qYkCDPxoenhZvVHKcExMQ202KXYjtXNEON_DATABASE_URL=postgresql://neondb_owner:npg_8x5DnptjSZVY@ep-shiny-sun-a7jqtm04-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
